--- a/.github/workflows/velox_backend.yml
+++ b/.github/workflows/velox_backend.yml
@@ -16,6 +16,20 @@
 name: Velox backend Github Runner
 
 on:
+  workflow_dispatch:
+    inputs:
+      spark:
+        description: 'Spark version: spark-3.2, spark-3.3, spark-3.4 or spark-3.5'
+        required: true
+        default: 'spark-3.5'
+      hadoop:
+        description: 'Hadoop version: 2.7.4, 3.2.0, 3.2.2, 3.3.1, 3.3.3 or 3.3.6'
+        required: true
+        default: '3.3.3'
+      ref:
+        description: 'Checkout repo ref to build'
+        required: true
+        default: 'main'
   pull_request:
     paths:
       - '.github/workflows/velox_backend.yml'
